<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".views.activities.TranslationActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

        <Spinner
                android:id="@+id/spin_transl_from"
                style="@style/sp_trans"/>

        <Spinner
                android:id="@+id/spin_transl_to"
                style="@style/sp_trans"/>

    </LinearLayout>

    <android.support.v7.widget.CardView
            style="@style/cv_trans.et"
            app:cardCornerRadius="8dp"
            app:cardElevation="5dp">

        <EditText
                android:id="@+id/et_trans_from"
                style="@style/et_trans"/>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
            style="@style/cv_trans.et"
            app:cardBackgroundColor="@android:color/darker_gray"
            app:cardCornerRadius="8dp"
            app:cardElevation="5dp">

        <EditText
                android:id="@+id/et_trans_to"
                style="@style/et_trans"
                android:focusable="false"/>

    </android.support.v7.widget.CardView>

    <Button
            android:id="@+id/btn_trans"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/btn_translate"
            android:onClick="translate"/>

    <android.support.v7.widget.CardView
            style="@style/cv_trans.list"
            app:cardCornerRadius="8dp"
            app:cardElevation="5dp">

        <android.support.v7.widget.RecyclerView
                android:id="@+id/list_translations"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layoutManager="android.support.v7.widget.LinearLayoutManager"/>

    </android.support.v7.widget.CardView>

</LinearLayout>